jwt 발급 function 및 jwt util class 추가

--- a/securityDemo/pom.xml
+++ b/securityDemo/pom.xml
@@ -47,6 +47,15 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- for use jwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
